# toilav-bot

./: .gitignore  CLAUDE.md  PRODUCTION_PLAN.md  Plan_CreateOrder.md  README.md  backlog.md  docker-compose.yml  main.py  pyproject.toml  seed_db.sh
.claude/: CLAUDE.md  settings.json
app/services/chatbot/: Dockerfile  config.py  database.py  db_tools_sandbox.ipynb  dbutils.py  experiments.ipynb  main.py  models.py  openai_services.py  pyproject.toml  queries.py  router.py  routes.py  rules.py  security.py  whatsapp_client.py  whatsapp_utils.py  yalti.py
app/services/chatbot/decorators/: security.py
app/services/chatbot/legacy/: views.py
app/services/chatbot/legacy/utils/: whatsapp_utils.py
app/services/chatbot/tests/: conftest.py  test_cancel_order.py  test_config.py  test_create_order.py  test_escalate_to_staff.py  test_get_active_order.py  test_get_or_create_customer.py  test_order_summary.py  test_routes.py  test_security.py  test_show_products.py  test_update_order.py  test_whatsapp_client.py  test_whatsapp_utils.py  test_yalti.py
app/services/database/: .dockerignore  Dockerfile  __init__.py  chatbot_schema.py  dbconfig.py  main.py  pyproject.toml  queries.py  run_engine.py  schema.py  seed.sql  seed_pg.sql
app/services/database/data/: seed_dk.sql  seed_pg.sql  upload_example.py
app/utils/: whatsapp_utils.py
data/info_clientes/: Contacts.xlsx
data/raw/: Precios Mega Carnes.xlsx
data/tremenda/: populate_db.sql
pgadmin/: servers.json
postgres-init/: init-dbs.sql
scripts/: seed_tremenda_nuez.py
start/: whatsapp_quickstart.py
(+29 files in other folders)
