[project]
name = "database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "duckdb>=1.4.4",
    "duckdb-engine>=0.17.0",
    "ipykernel>=7.2.0",
]
