[project]
name = "toilav-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.37",
    "psycopg2-binary>=2.9.11",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "duckdb>=1.4.4",
    "duckdb-engine>=0.17.0",
    "ipykernel>=7.2.0",
]
